cabal-version:       2.0
name:                led-display
version:             0.1
synopsis:            Displays stuff on a LED display
description:         Program to display stuff (text, icons) via combinators
                     (scroll, alternate, layouting) on a DreamDigical LED display.
license:             BSD3
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
copyright:           2014 Joachim Breitner 
category:            Graphics
build-type:          Simple

executable led-display
  default-language:
    Haskell2010
  main-is:
    led-main.hs
  other-modules:
    Fonts
    LedXML
    ScreenFile
    Screen
    Sinus
    Types
    USB
  build-depends:
    base ^>=4.16.4.0,
    JuicyPixels ^>=3.3.7,
    containers ^>=0.6.5.1,
    usb ^>=1.3.0.6,
    bytestring ^>=0.11.4.0,
    vector ^>=0.12.3.1,
    fsnotify ^>=0.3.0.1,
    filepath ^>=1.4.2.2,
    xml ^>=1.3.14
  hs-source-dirs:      src

executable led-display-terminal
  default-language:
    Haskell2010
  main-is:
    terminal-main.hs
  other-modules:
    Fonts
    LedXML
    ScreenFile
    Screen
    Sinus
    Terminal
    Types
  build-depends:
    base ^>=4.16.4.0,
    ansi-terminal ^>=1.0,
    JuicyPixels ^>=3.3.7,
    containers ^>=0.6.5.1,
    bytestring ^>=0.11.4.0,
    vector ^>=0.12.3.1,
    fsnotify ^>=0.3.0.1,
    filepath ^>=1.4.2.2,
    xml ^>=1.3.14
  hs-source-dirs:      src
